<resources>
    <string name="app_name">LocationDemo</string>
    <string name="current_location">Current Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="country">Country</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="get_last_location">get last Location</string>
</resources>